--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -1,62 +1,57 @@
-# PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
-# https://htmlpreview.github.io/?https://github.com/conformal/spectrwm/blob/master/spectrwm.html
-# NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
+#################################################################################
+###              spectrwm for discordia - 2021                                ###
+#################################################################################
+
 
 workspace_limit	                            = 7
-focus_mode  		                        = follow
+focus_mode  		                        = default
 # focus_close		                        = previous
 # focus_close_wrap	                        = 1
 # focus_default		                        = last
 spawn_position		                        = first
-# workspace_clamp	                        = 1
-# warp_focus		                        = 1
-# warp_pointer		                        = 1
+workspace_clamp	                            = 1
+warp_focus		                            = 1
+warp_pointer		                        = 1
 
 ####### Window Decoration #######
+
 border_width		                        = 0
 # color_focus		                        = red
 # color_focus_maximized	                    = yellow
 # color_unfocus		                        = rgb:88/88/88
 # color_unfocus_maximized	                = rgb:88/88/00
-region_padding		                        = 5
-tile_gap		                            = 5
-
-####### Region containment #######
-# Distance window must be dragged/resized beyond the region edge before it is
-# allowed outside the region.
-# boundary_width		                    = 50
-
-# Remove window border when bar is disabled and there is only one window in workspace
-# disable_border		                    = 1
+region_padding		                        = 18
+tile_gap		                            = 18
 
 ####### Bar Settings #######
+
 # bar_enabled		                        = 1
 # bar_enabled_ws[1]	                        = 1
 bar_border_width	                        = 0
-# bar_border[1]		                        = rgb:00/00/00
-# bar_border_unfocus[1]	                    = rgb:00/00/00
-# bar_color[1]		                        = black
+# bar_border[1]		                        = rgb:ff/ff/ff
+# bar_border_unfocus[1]	                    = rgb:a0/a0/a0
+bar_color[1]		                        = rgb:00/00/00,rgb:e4/e6/5b
 # bar_color_selected[1]	                    = rgb:00/80/80
-# bar_font_color[1]	                        = rgb:a0/a0/a0
-bar_font_color_selected	                    = gray
-bar_font		                            = xRoboto-regular:pixelsize=16:antialias=true
-# bar_font_pua		                        = Typicons:pixelsize=14:antialias=true
-bar_action		                            = conky
+bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:e4/e6/5b
+bar_font_color_selected	                    = rgb:e4/e6/5b
+bar_font		                            = NotoSans Nerd Font:size=13:style=Regular:antialias=true 
+# bar_font_pua		                        = FontAwesome:style=regular:pixelsize=16:antialias=true
+bar_action		                            = /mnt/Gog/repos/system/Scripts/baraction.sh
 bar_action_expand	                        = 1
 # bar_justify		                        = left
-bar_format		                            = +L +|C +W +|R +A  %a %b %d | %R
-workspace_indicator	                        = markcurrent,printnames,listactive
+bar_format		                            = +L +|C +W +|R+@fg=1;+A
+workspace_indicator	                        = markcurrent,printnames,listactive,markurgent
 # bar_at_bottom		                        = 1
 # stack_enabled		                        = 1
 # clock_enabled		                        = 1
 # clock_format		                        = %a %b %d %R %Z %Y
-# iconic_enabled	                        = 0
+iconic_enabled	                            = 1
 # maximize_hide_bar	                        = 0
 # window_class_enabled	                    = 0
 # window_instance_enabled	                = 0
 window_name_enabled	                        = 1
 # verbose_layout		                    = 1
-# urgent_enabled		                    = 1
+# urgent_enabled		                    = 0
 # urgent_collapse	                        = 0
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
@@ -68,82 +63,121 @@ region		                                = screen[1]:1920x1080+0+0
 region		                                = screen[1]:1920x1080+1920+0
 
 # Customize workspace layout at start
+
 # layout		                            = ws[1]:4:0:0:0:vertical
 # layout		                            = ws[2]:0:0:0:0:horizontal
-# layout		                            = ws[3]:0:0:0:0:fullscreen
-# layout		                            = ws[4]:4:0:0:0:vertical_flip
+layout		                                = ws[3]:0:0:0:0:vertical_flip
+layout   		                            = ws[4]:7:0:0:0:vertical
 # layout		                            = ws[5]:0:0:0:0:horizontal_flip
 
+
 ####### Set workspace name at start #######
-name			                            = ws[1]:WWW
-name			                            = ws[2]:Edit
-name                                        = ws[3]:Term
-name			                            = ws[4]:Files
-name			                            = ws[5]:GFX
-name                                        = ws[6]:Esc
-name                                        = ws[7]:Ctrl
+
+name			                            = ws[1]:爵
+name			                            = ws[2]:
+name                                        = ws[3]:
+name			                            = ws[4]:
+name			                            = ws[5]:
+name                                        = ws[6]:
+name                                        = ws[7]:
+
+####### Auto #######
+
+autorun                                     = ws[1]:picom -b --experimental-backend
+autorun                                     = ws[1]:clipmenud
+autorun                                     = ws[1]:soundcard2
+autorun                                     = ws[1]:dpms_off
+autorun                                     = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+autorun                                     = ws[1]:xdotool key --clearmodifiers Num_Lock
+autorun                                     = ws[1]:udiskie
+autorun                                     = ws[1]:sh /home/zero/.fehbg
+autorun                                     = ws[1]:dropbox
+autorun                                     = ws[3]:pcmanfm
+autorun                                     = ws[5]:thunderbird
+autorun                                     = ws[4]:kitty --name A
+autorun                                     = ws[4]:kitty --name B
+autorun                                     = ws[4]:kitty --name C
 
 # Mod key
 modkey                                      = Mod4
 
 ####### QUIRKS #######
 
+quirk[Vivaldi-stable]                       = WS[1]
+quirk[code-oss]                             = WS[2]
+quirk[Pcmanfm:pcmanfm]                      = WS[3]
+quirk[kitty:A]                              = WS[4]
+quirk[kitty:B]                              = WS[4]
+quirk[kitty:C]                              = WS[4]
+quirk[Thunderbird]                          = WS[5]
 quirk[Cadence:cadence.py]                   = FLOAT
 quirk[kitty:Floaterm]                       = FLOAT
 quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
 quirk[Carla2-Multi-Client]                  = FLOAT
 quirk[SimpleScreenRecorder]                 = FLOAT
-quirk[Vivaldi-stable]                       = WS[1]
-quirk[code-oss]                             = WS[2]
-quirk[Pcmanfm:pcmanfm]                      = WS[4]
-quirk[Gimp:gimp]                            = WS[5]
+quirk[Nm-connection-editor]                 = FLOAT
+quirk[Gcolor2]                              = FLOAT
+quirk[Arandr]                               = FLOAT
+quirk[feh]                                  = FLOAT + IGNORESPAWNWS
+quirk[kitty:kitty]                          = IGNORESPAWNWS
+quirk[mpv]                                  = FLOAT
 
 ####### PROGRAMS #######
 
 program[lock]		                        = dm-tool lock
+program[clipmenu]                           = clipmenu -c -bw 2 -fn 'Droid Sans Mono-14'
+program[notifs]                             = sh -c "tac /tmp/notification.log | dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'"
 program[term]		                        = kitty
-program[menu]		                        = dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
+program[menu]		                        = j4-dmenu-desktop --dmenu="dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'" --term="kitty" --use-xdg-de --no-generic
 program[screenshot_all]	                    = flameshot full -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
-
-program[carla]                              = carla-jack-multi
+program[network]                            = nm-connection-editor
+program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-multi
 program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
 program[browser]                            = vivaldi-stable
 program[editor]                             = code-oss
 program[fileman]                            = pcmanfm
-program[gfx]                                = gimp --no-splash
+program[gimp]                               = gimp --no-splash
 program[rack]                               = vcvrack
-program[vim]                                = kitty nano
-program[aud]                                = ocenaudio
+program[nano]                               = kitty nano
+program[audio]                              = audacity
 program[mix]                                = mixxx
-program[scrnrec]                            = simplescreenrecorder
+program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
-program[floaterm]                           = kitty --name Floaterm
+program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --name Floaterm
 program[git]                                = gitkraken
 program[cadence]                            = cadence
+program[bindings]                           = sh -c "grep bind /mnt/Gog/repos/system/spectrwm.conf | tail -n +3 |  sed 's/.....//;s/\]//' | column -t | dmenu -fn 'Droid Sans Mono-14' -c -i -l 12 -bw 2"
 ####### Key bindings #######
+
 ## Launchers
 
 bind[browser]                               = MOD+F1
 bind[editor]                                = MOD+F2
 bind[fileman]                               = MOD+F3
-bind[gfx]                                   = MOD+F4
+bind[gimp]                                  = MOD+F4
 bind[rack]                                  = MOD+F5
-bind[vim]                                   = MOD+F6
-bind[aud]                                   = MOD+F7
+bind[nano]                                  = MOD+F6
+bind[audio]                                 = MOD+F7
 bind[mix]                                   = MOD+F8
-bind[scrnrec]                               = MOD+F9
+bind[screenrec]                             = MOD+F9
 bind[htop]                                  = MOD+F10
 bind[floaterm]                              = MOD+F11
 bind[git]                                   = MOD+F12
-bind[menu]		                            = MOD+d
 bind[screenshot_all]	                    = MOD+Print
 bind[screenshot_gui]   	                    = MOD+p
 bind[term]		                            = MOD+Return
 bind[carla]                                 = MOD+j
 bind[cadence]                               = MOD+v
 bind[paper]                                 = MOD+u
+bind[network]                               = MOD+n
 
+## Menus
+
+bind[menu]		                            = MOD+d
+bind[clipmenu]                              = MOD+c
+bind[bindings]                              = MOD+k
+bind[notifs]                                = MOD+f
 
 ## Window control
 
@@ -152,8 +186,6 @@ bind[focus_main]	                        = MOD+m
 bind[focus_next]	                        = MOD+Tab
 bind[focus_prev]	                        = MOD+Shift+Tab
 bind[height_grow]	                        = MOD+Shift+equal
-bind[height_shrink]	                        = MOD+Shift+minus
-bind[iconify]		                        = MOD+w
 bind[uniconify]		                        = MOD+Shift+w
 bind[maximize_toggle]	                    = MOD+e
 bind[swap_main]		                        = MOD+Control+Up
@@ -206,9 +238,3 @@ bind[rg_prev]		                        = MOD+Shift+Left
 bind[quit]		                            = MOD+Shift+q
 bind[restart]		                        = MOD+q
 bind[lock]		                            = MOD+Shift+Delete
-
-
-
-
-
-
