--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -15,13 +15,13 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 15.0;
 rounded-corners-exclude = [
   "window_type = 'tooltip'",
-  "window_type = 'panel'",
   "class_g = 'Dunst'",
   "class_g = 'Polybar'",
-  "class_g = 'spectrwm'"
+  "class_g = 'spectrwm'",
+  "class_g = 'dmenu'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -98,6 +98,7 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
+  "class_g = 'spectrwm'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -153,7 +154,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -176,7 +177,7 @@ inactive-opacity-override = false;
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.1
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -254,7 +255,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 5;
+  strength = 7;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
