--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -30,16 +30,16 @@ tile_gap		                            = 18
 bar_border_width	                        = 0
 # bar_border[1]		                        = rgb:ff/ff/ff
 # bar_border_unfocus[1]	                    = rgb:a0/a0/a0
-bar_color[1]		                        = rgb:00/00/00,rgb:e4/e6/5b
+bar_color[1]		                        = rgb:00/00/00,rgb:e4/e6/5b,rgb:a0/a0/a0
 # bar_color_selected[1]	                    = rgb:00/80/80
-bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:e4/e6/5b
+bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:e4/e6/5b,black
 bar_font_color_selected	                    = rgb:e4/e6/5b
-bar_font		                            = NotoSans Nerd Font:size=13:style=Regular:antialias=true 
+bar_font		                            = NotoSans Nerd Font:size=14:style=Regular:antialias=true 
 # bar_font_pua		                        = FontAwesome:style=regular:pixelsize=16:antialias=true
 bar_action		                            = /mnt/Gog/repos/system/Scripts/baraction.sh
 bar_action_expand	                        = 1
 # bar_justify		                        = left
-bar_format		                            = +L +|C +W +|R+@fg=1;+A
+bar_format		                            = +L +|C +W +|R+@fg=3;+A
 workspace_indicator	                        = markcurrent,printnames,listactive,markurgent
 # bar_at_bottom		                        = 1
 # stack_enabled		                        = 1
@@ -94,7 +94,7 @@ autorun                                     = ws[1]:sh /home/zero/.fehbg
 autorun                                     = ws[1]:dropbox
 autorun                                     = ws[3]:pcmanfm
 autorun                                     = ws[5]:thunderbird
-autorun                                     = ws[4]:kitty --name A
+autorun                                     = ws[4]:kitty --name A --directory /mnt/Gog/repos/system/Scripts
 autorun                                     = ws[4]:kitty --name B
 autorun                                     = ws[4]:kitty --name C
 
@@ -126,7 +126,8 @@ quirk[mpv]                                  = FLOAT
 
 program[lock]		                        = dm-tool lock
 program[clipmenu]                           = clipmenu -c -bw 2 -fn 'Droid Sans Mono-14'
-program[notifs]                             = sh -c "tac /tmp/notification.log | dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'"
+program[notifs]                             = sh -c 'tac /tmp/notification.log | dmenu -i -bw 2 -c -l 15 -fn "Droid Sans Mono-14" | while read noti; do sed -i "/$noti/d" /tmp/notification.log ; done'
+program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/dswitcher.sh
 program[term]		                        = kitty
 program[menu]		                        = j4-dmenu-desktop --dmenu="dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'" --term="kitty" --use-xdg-de --no-generic
 program[screenshot_all]	                    = flameshot full -p /mnt/Gog/Pictures/scrots
@@ -148,6 +149,7 @@ program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 
 program[git]                                = gitkraken
 program[cadence]                            = cadence
 program[bindings]                           = sh -c "grep bind /mnt/Gog/repos/system/spectrwm.conf | tail -n +3 |  sed 's/.....//;s/\]//' | column -t | dmenu -fn 'Droid Sans Mono-14' -c -i -l 12 -bw 2"
+
 ####### Key bindings #######
 
 ## Launchers
@@ -178,6 +180,7 @@ bind[menu]		                            = MOD+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[notifs]                                = MOD+f
+bind[winfind]                               = MOD+g
 
 ## Window control
 
