--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -1,5 +1,5 @@
 #################################################################################
-###              spectrwm for discordia - 2021                                ###
+###                    spectrwm for discordia - 2021                          ###
 #################################################################################
 
 
@@ -30,11 +30,11 @@ tile_gap		                            = 18
 bar_border_width	                        = 0
 # bar_border[1]		                        = rgb:ff/ff/ff
 # bar_border_unfocus[1]	                    = rgb:a0/a0/a0
-bar_color[1]		                        = rgb:00/00/00,rgb:e4/e6/5b,rgb:a0/a0/a0
+bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:a0/a0/a0
 # bar_color_selected[1]	                    = rgb:00/80/80
-bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:e4/e6/5b,black
-bar_font_color_selected	                    = rgb:e4/e6/5b
-bar_font		                            = NotoSans Nerd Font:size=14:style=Regular:antialias=true 
+bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:df/e1/48,black
+bar_font_color_selected	                    = rgb:df/e1/48
+bar_font		                            = NotoSans Nerd Font:size=15:style=Regular:antialias=true 
 # bar_font_pua		                        = FontAwesome:style=regular:pixelsize=16:antialias=true
 bar_action		                            = /mnt/Gog/repos/system/Scripts/baraction.sh
 bar_action_expand	                        = 1
