--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -2,7 +2,6 @@
 ###                    spectrwm for discordia - 2021                          ###
 #################################################################################
 
-
 workspace_limit	                            = 7
 focus_mode  		                        = default
 # focus_close		                        = previous
@@ -27,31 +26,32 @@ tile_gap		                            = 18
 
 # bar_enabled		                        = 1
 # bar_enabled_ws[1]	                        = 1
-bar_border_width	                        = 0
-# bar_border[1]		                        = rgb:ff/ff/ff
-# bar_border_unfocus[1]	                    = rgb:a0/a0/a0
-bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:a0/a0/a0
+bar_border_width	                        = 3
+bar_border[1]		                        = rgb:00/00/00
+bar_border_unfocus[1]	                    = rgb:00/00/00
+bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:a0/a0/a0,rgb:45/86/A6
 # bar_color_selected[1]	                    = rgb:00/80/80
-bar_font_color[1]	                        = rgb:a0/a0/a0,rgb:e6/5b/5b,rgb:df/e1/48,black
+bar_font_color[1]	                        = rgb:ff/ff/ff,rgb:e6/5b/5b,rgb:df/e1/48,black
 bar_font_color_selected	                    = rgb:df/e1/48
-bar_font		                            = NotoSans Nerd Font:size=15:style=Regular:antialias=true 
+bar_font		                            = NotoSans Nerd Font:size=12:style=Regular:antialias=true 
 # bar_font_pua		                        = FontAwesome:style=regular:pixelsize=16:antialias=true
 bar_action		                            = /mnt/Gog/repos/system/Scripts/baraction.sh
 bar_action_expand	                        = 1
 # bar_justify		                        = left
-bar_format		                            = +L +|C +W +|R+@fg=3;+A
-workspace_indicator	                        = markcurrent,printnames,listactive,markurgent
+bar_format		                            = +@fg=2;+L+5<+@fg=0;+@bg=3;  +D+_30_C  +|R +@fg=3;+A
+workspace_indicator	                        = markcurrent,printnames,listactive,noindexes
+# workspace_mark_urgent                     = !
 # bar_at_bottom		                        = 1
 # stack_enabled		                        = 1
 # clock_enabled		                        = 1
 # clock_format		                        = %a %b %d %R %Z %Y
 iconic_enabled	                            = 1
 # maximize_hide_bar	                        = 0
-# window_class_enabled	                    = 0
+window_class_enabled	                    = 1
 # window_instance_enabled	                = 0
-window_name_enabled	                        = 1
+# window_name_enabled	                    = 1
 # verbose_layout		                    = 1
-# urgent_enabled		                    = 0
+# urgent_enabled		                    = 1
 # urgent_collapse	                        = 0
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
@@ -83,20 +83,9 @@ name                                        = ws[7]:
 
 ####### Auto #######
 
-autorun                                     = ws[1]:picom -b --experimental-backend
-autorun                                     = ws[1]:clipmenud
-autorun                                     = ws[1]:soundcard2
-autorun                                     = ws[1]:dpms_off
-autorun                                     = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-autorun                                     = ws[1]:xdotool key --clearmodifiers Num_Lock
-autorun                                     = ws[1]:udiskie
-autorun                                     = ws[1]:sh /home/zero/.fehbg
-autorun                                     = ws[1]:dropbox
 autorun                                     = ws[3]:pcmanfm
 autorun                                     = ws[5]:thunderbird
-autorun                                     = ws[4]:kitty --name A --directory /mnt/Gog/repos/system/Scripts
-autorun                                     = ws[4]:kitty --name B
-autorun                                     = ws[4]:kitty --name C
+autorun                                     = ws[4]:kitty --name A
 
 # Mod key
 modkey                                      = Mod4
@@ -107,29 +96,30 @@ quirk[Vivaldi-stable]                       = WS[1]
 quirk[code-oss]                             = WS[2]
 quirk[Pcmanfm:pcmanfm]                      = WS[3]
 quirk[kitty:A]                              = WS[4]
-quirk[kitty:B]                              = WS[4]
-quirk[kitty:C]                              = WS[4]
 quirk[Thunderbird]                          = WS[5]
 quirk[Cadence:cadence.py]                   = FLOAT
-quirk[kitty:Floaterm]                       = FLOAT
+quirk[Floaterm]                             = FLOAT
 quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
 quirk[Carla2-Multi-Client]                  = FLOAT
 quirk[SimpleScreenRecorder]                 = FLOAT
 quirk[Nm-connection-editor]                 = FLOAT
 quirk[Gcolor2]                              = FLOAT
 quirk[Arandr]                               = FLOAT
+quirk[balena-etcher-electron]               = FLOAT
 quirk[feh]                                  = FLOAT + IGNORESPAWNWS
 quirk[kitty:kitty]                          = IGNORESPAWNWS
 quirk[mpv]                                  = FLOAT
+quirk[multibootusb]                         = FLOAT
 
 ####### PROGRAMS #######
 
-program[lock]		                        = dm-tool lock
+program[lock]		                        = slock
 program[clipmenu]                           = clipmenu -c -bw 2 -fn 'Droid Sans Mono-14'
 program[notifs]                             = sh -c 'tac /tmp/notification.log | dmenu -i -bw 2 -c -l 15 -fn "Droid Sans Mono-14" | while read noti; do sed -i "/$noti/d" /tmp/notification.log ; done'
 program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/dswitcher.sh
 program[term]		                        = kitty
 program[menu]		                        = j4-dmenu-desktop --dmenu="dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'" --term="kitty" --use-xdg-de --no-generic
+program[run_menu]                           = dmenu_run -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'
 program[screenshot_all]	                    = flameshot full -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[network]                            = nm-connection-editor
@@ -145,7 +135,7 @@ program[audio]                              = audacity
 program[mix]                                = mixxx
 program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
-program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --name Floaterm
+program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
 program[git]                                = gitkraken
 program[cadence]                            = cadence
 program[bindings]                           = sh -c "grep bind /mnt/Gog/repos/system/spectrwm.conf | tail -n +3 |  sed 's/.....//;s/\]//' | column -t | dmenu -fn 'Droid Sans Mono-14' -c -i -l 12 -bw 2"
@@ -177,6 +167,7 @@ bind[network]                               = MOD+n
 ## Menus
 
 bind[menu]		                            = MOD+d
+bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[notifs]                                = MOD+f
