--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -15,7 +15,7 @@ warp_pointer		                        = 1
 ####### Window Decoration #######
 
 border_width		                        = 0
-# color_focus		                        = red
+# color_focus		                        = rgb:df/e1/48
 # color_focus_maximized	                    = yellow
 # color_unfocus		                        = rgb:88/88/88
 # color_unfocus_maximized	                = rgb:88/88/00
@@ -70,7 +70,6 @@ layout		                                = ws[3]:0:0:0:0:vertical_flip
 layout   		                            = ws[4]:7:0:0:0:vertical
 # layout		                            = ws[5]:0:0:0:0:horizontal_flip
 
-
 ####### Set workspace name at start #######
 
 name			                            = ws[1]:爵
@@ -108,24 +107,24 @@ quirk[Arandr]                               = FLOAT
 quirk[balena-etcher-electron]               = FLOAT
 quirk[feh]                                  = FLOAT + IGNORESPAWNWS
 quirk[kitty:kitty]                          = IGNORESPAWNWS
-quirk[mpv]                                  = FLOAT
 quirk[multibootusb]                         = FLOAT
 
 ####### PROGRAMS #######
 
-program[lock]		                        = slock
-program[clipmenu]                           = clipmenu -c -bw 2 -fn 'Droid Sans Mono-14'
-program[notifs]                             = sh -c 'tac /tmp/notification.log | dmenu -i -bw 2 -c -l 15 -fn "Droid Sans Mono-14" | while read noti; do sed -i "/$noti/d" /tmp/notification.log ; done'
+program[power]                              = sh /mnt/Gog/repos/system/Scripts/dpower.sh
+program[clipmenu]                           = sh /mnt/Gog/repos/system/Scripts/clipmenu.sh
+program[notifs]                             = sh /mnt/Gog/repos/system/Scripts/notifs.sh
 program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/dswitcher.sh
-program[term]		                        = kitty
-program[menu]		                        = j4-dmenu-desktop --dmenu="dmenu -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'" --term="kitty" --use-xdg-de --no-generic
-program[run_menu]                           = dmenu_run -i -bw 2 -c -l 15 -fn 'Droid Sans Mono-14'
+program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.sh
+program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
+program[bindings]                           = sh /mnt/Gog/repos/system/Scripts/bindings.sh
+program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
 program[screenshot_all]	                    = flameshot full -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
-program[network]                            = nm-connection-editor
+program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
 program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-multi
-program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
 program[browser]                            = vivaldi-stable
+program[browser_session]                    = vivaldi-stable --restore-last-session
 program[editor]                             = code-oss
 program[fileman]                            = pcmanfm
 program[gimp]                               = gimp --no-splash
@@ -135,16 +134,17 @@ program[audio]                              = audacity
 program[mix]                                = mixxx
 program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
-program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
+program[network]                            = nm-connection-editor
 program[git]                                = gitkraken
 program[cadence]                            = cadence
-program[bindings]                           = sh -c "grep bind /mnt/Gog/repos/system/spectrwm.conf | tail -n +3 |  sed 's/.....//;s/\]//' | column -t | dmenu -fn 'Droid Sans Mono-14' -c -i -l 12 -bw 2"
-
+program[term]		                        = kitty
+ 
 ####### Key bindings #######
 
 ## Launchers
 
 bind[browser]                               = MOD+F1
+bind[browser_session]                       = MOD+Shift+F1
 bind[editor]                                = MOD+F2
 bind[fileman]                               = MOD+F3
 bind[gimp]                                  = MOD+F4
@@ -172,6 +172,7 @@ bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[notifs]                                = MOD+f
 bind[winfind]                               = MOD+g
+bind[power]                                 = MOD+Pause
 
 ## Window control
 
@@ -229,6 +230,9 @@ bind[rg_prev]		                        = MOD+Shift+Left
 
 ## WM control
 
-bind[quit]		                            = MOD+Shift+q
 bind[restart]		                        = MOD+q
-bind[lock]		                            = MOD+Shift+Delete
+bind[restart_of_day]                        = MOD+Shift+q
+
+
+# bind[]		                            = MOD+Shift+q
+bind[]		                            = MOD+Shift+Delete
