--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -35,7 +35,7 @@ bar_font_color[1]	                        = rgb:ff/ff/ff,rgb:e6/5b/5b,rgb:df/e1/
 bar_font_color_selected	                    = rgb:df/e1/48
 bar_font		                            = NotoSans Nerd Font:size=12:style=Regular:antialias=true 
 # bar_font_pua		                        = FontAwesome:style=regular:pixelsize=16:antialias=true
-bar_action		                            = /mnt/Gog/repos/system/Scripts/baraction.sh
+bar_action		                            = conky
 bar_action_expand	                        = 1
 # bar_justify		                        = left
 bar_format		                            = +@fg=2;+L+5<+@fg=0;+@bg=3;  +D+_30_C  +|R +@fg=3;+A
@@ -45,7 +45,7 @@ workspace_indicator	                        = markcurrent,printnames,listactive,
 # stack_enabled		                        = 1
 # clock_enabled		                        = 1
 # clock_format		                        = %a %b %d %R %Z %Y
-iconic_enabled	                            = 1
+# iconic_enabled                            = 0
 # maximize_hide_bar	                        = 0
 window_class_enabled	                    = 1
 # window_instance_enabled	                = 0
@@ -113,7 +113,6 @@ quirk[multibootusb]                         = FLOAT
 
 program[power]                              = sh /mnt/Gog/repos/system/Scripts/dpower.sh
 program[clipmenu]                           = sh /mnt/Gog/repos/system/Scripts/clipmenu.sh
-program[notifs]                             = sh /mnt/Gog/repos/system/Scripts/notifs.sh
 program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/dswitcher.sh
 program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.sh
 program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
@@ -130,8 +129,8 @@ program[fileman]                            = pcmanfm
 program[gimp]                               = gimp --no-splash
 program[rack]                               = vcvrack
 program[nano]                               = kitty nano
-program[audio]                              = audacity
-program[mix]                                = mixxx
+program[audacity]                           = audacity
+program[mixxx]                              = mixxx
 program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
 program[network]                            = nm-connection-editor
@@ -141,7 +140,7 @@ program[term]		                        = kitty
  
 ####### Key bindings #######
 
-## Launchers
+## Launchers[global]
 
 bind[browser]                               = MOD+F1
 bind[browser_session]                       = MOD+Shift+F1
@@ -150,8 +149,8 @@ bind[fileman]                               = MOD+F3
 bind[gimp]                                  = MOD+F4
 bind[rack]                                  = MOD+F5
 bind[nano]                                  = MOD+F6
-bind[audio]                                 = MOD+F7
-bind[mix]                                   = MOD+F8
+bind[audacity]                              = MOD+F7
+bind[mixxx]                                 = MOD+F8
 bind[screenrec]                             = MOD+F9
 bind[htop]                                  = MOD+F10
 bind[floaterm]                              = MOD+F11
@@ -170,7 +169,6 @@ bind[menu]		                            = MOD+d
 bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
-bind[notifs]                                = MOD+f
 bind[winfind]                               = MOD+g
 bind[power]                                 = MOD+Pause
 
@@ -181,7 +179,6 @@ bind[focus_main]	                        = MOD+m
 bind[focus_next]	                        = MOD+Tab
 bind[focus_prev]	                        = MOD+Shift+Tab
 bind[height_grow]	                        = MOD+Shift+equal
-bind[uniconify]		                        = MOD+Shift+w
 bind[maximize_toggle]	                    = MOD+e
 bind[swap_main]		                        = MOD+Control+Up
 bind[swap_next]		                        = MOD+Control+Right
